--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,6 +71,15 @@ p {
   color: #464646;
 }
 
+button {
+  border: 0;
+  font-weight: 700;
+  line-height: 2;
+  padding: 0.5em 1em;
+  border: 2px solid black;
+  margin-right: 0.5em;
+}
+
 .accordion__input:checked ~ .accordion__content {
   display: block;
 }
